# ghc-wasm-experiment

./: .gitignore  README.md  flake.nix  gwm.cabal  package-lock.json  package.json
src/: Main.hs
www/: index.html  main.js
